[gd_scene load_steps=6 format=3 uid="uid://b6pbse5p4p00g"]

[ext_resource type="Script" uid="uid://bwnfpqjexdky5" path="res://Scripts/Debug.gd" id="1_22g2l"]
[ext_resource type="Script" uid="uid://duf2yjxnqvq33" path="res://Scripts/GameUI.gd" id="1_httrr"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_1avqd"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_httrr"]
content_margin_left = 0.0
content_margin_top = 0.0
content_margin_right = 0.0
content_margin_bottom = 0.0
bg_color = Color(0, 0, 0, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
corner_detail = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1avqd"]
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0
bg_color = Color(0.1, 0.1, 0.1, 0.6)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
corner_detail = 5

[node name="UI" type="Control" node_paths=PackedStringArray("pause_menu", "options_menu")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_httrr")
pause_menu = NodePath("Pause Menu")
options_menu = NodePath("Options Menu")
main_menu_scene = "res://Scenes/main_menu.tscn"

[node name="DEBUGTEXT" type="Label" parent="." groups=["Player"]]
layout_mode = 0
offset_left = 1.0
offset_right = 292.0
offset_bottom = 212.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_font_sizes/font_size = 30
text = "DEBUG TEXT"
script = ExtResource("1_22g2l")

[node name="Pause Menu" type="MarginContainer" parent="."]
visible = false
layout_mode = 0
offset_left = 50.0
offset_top = 50.0
offset_right = 1870.0
offset_bottom = 1030.0
theme_override_constants/margin_left = 500
theme_override_constants/margin_top = 100
theme_override_constants/margin_right = 500
theme_override_constants/margin_bottom = 100

[node name="Panel" type="Panel" parent="Pause Menu"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="Pause Menu/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -18.0
offset_bottom = 18.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 100
theme_override_constants/margin_top = 100
theme_override_constants/margin_right = 100
theme_override_constants/margin_bottom = 100

[node name="VBoxContainer" type="VBoxContainer" parent="Pause Menu/Panel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 50
alignment = 1

[node name="Label" type="Label" parent="Pause Menu/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 70
text = "PAUSE MENU"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Panel" type="Panel" parent="Pause Menu/Panel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_1avqd")

[node name="Resume" type="Button" parent="Pause Menu/Panel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 50
text = "Resume"

[node name="Options" type="Button" parent="Pause Menu/Panel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 50
text = "Options"

[node name="Exit to Main Menu" type="Button" parent="Pause Menu/Panel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 50
text = "Exit to Main Menu"

[node name="Options Menu" type="MarginContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 500
theme_override_constants/margin_top = 100
theme_override_constants/margin_right = 500
theme_override_constants/margin_bottom = 100

[node name="Options" type="Panel" parent="Options Menu"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_httrr")

[node name="MarginContainer" type="MarginContainer" parent="Options Menu/Options"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50

[node name="VBoxContainer" type="VBoxContainer" parent="Options Menu/Options/MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Options Menu/Options/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 20
alignment = 1

[node name="Title" type="Label" parent="Options Menu/Options/MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 70
text = "Options"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Option" type="Label" parent="Options Menu/Options/MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "¯\\_(ツ)_/¯"
horizontal_alignment = 1
vertical_alignment = 1

[node name="OptionsBack" type="Button" parent="Options Menu/Options/MarginContainer"]
custom_minimum_size = Vector2(400, 100)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxFlat_1avqd")
text = "Back"

[connection signal="pressed" from="Pause Menu/Panel/MarginContainer/VBoxContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="Pause Menu/Panel/MarginContainer/VBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="Pause Menu/Panel/MarginContainer/VBoxContainer/Exit to Main Menu" to="." method="_on_exit_to_main_menu_pressed"]
[connection signal="pressed" from="Options Menu/Options/MarginContainer/OptionsBack" to="." method="_on_options_back_pressed"]
